# Interpreter

./: .clang-format  Ast.cpp  Ast.hpp  CMakeLists.txt  CMakeSettings.json  Cli.cpp  Evaluator.hpp  Exceptions.hpp  Grammar.hpp  Helpers.hpp  LICENSE  Lexer.hpp  Logger.hpp  Main.cpp  ParseError.hpp  Parser.hpp  Rule.hpp  Rules  Rules.md  SymbolTable.hpp  Tests.cpp  TestsEvaluator.cpp  TestsExternalFuntions.cpp  TestsLexer.cpp  TestsParser.cpp  TestsSymbolTable.cpp  TestsTicTacToe.cpp  TestsTypecheck.cpp  Token.hpp  ValueOperators.hpp  WrapperFunctions.hpp
examples/: Console.ct  Lexer01.ct  Lexer02.ct  Lexer03.ct  Lexer04.ct  Lexer06.ct  LexerComplex.ct  LexerInvalidNumber.ct  LexerInvalidString.ct  LexerNumbers.ct  LexerParentheses.ct  Playground.ct  TicTacToe.ct
examples/evaluator/: ArgumentReturn.ct  BoolReturn.ct  ConditionalAssignment.ct  DotOperatorChaining.ct  DoubleReturn.ct  EqualityOperator.ct  ForLoop.ct  FunctionCall.ct  FunctionRecursiveCall.ct  IfExample.ct  IncrementOperator.ct  IndexOperator.ct  LogicalAnd.ct  LogicalOr.ct  NegationOperator.ct  Object.ct  ObjectAssign.ct  PlusOperator.ct  SimpleAssignment.ct  StringReturn.ct  WhileLoop.ct
examples/externalfunctions/: ReadNumber.ct  ReadText.ct  Write.ct  WriteArgument.ct  WriteLine.ct  WriteLineArgument.ct
examples/lexer/: LexerComplex.ct  LexerKeywords.ct  LexerNegativeNumbers.ct  LexerOperators.ct  LexerStrings.ct
examples/parser/: Assignment.ct  (+35 more)
tests/: EvaluatorTests.cpp  ExternalFunctionsTests.cpp  LexerTests.cpp  ParserTests.cpp  SymbolTableTests.cpp  TicTacToeTests.cpp  TypecheckTests.cpp
(+20 files in other folders)
